# PicoWallet

./: README.md
pico/: CMakeLists.txt  pepper_gen.py  salt_gen.py
pico/src/: pico_wallet.c  wallet_defs.h
pico/src/gfx/: gfx_utils.c  gfx_utils.h  qr_code_screen.c  qr_code_screen.h  wallet_fonts.c  wallet_fonts.h  waveshare_gfx_interface.c
pico/src/utils/: bip39_wordlist.c  hash_utils.c  hash_utils.h  key_print_utils.c  key_print_utils.h  key_utils.c  key_utils.h  seed_utils.c  seed_utils.h  wallet_file.c  wallet_file.h
pico/src/utils/big_int/: big_int.c  big_int.h  byte_math_test.c
pico/src/utils/platform/: wallet_random.c  wallet_random.h
pico/src/wallet_app/: hd_wallet.c  hd_wallet.h  wallet_app.c  wallet_app.h  wallet_browse.c  wallet_browse.h  wallet_load.c  wallet_load.h
pico/src/wallet_app/screens/: icon_message_screen.c  icon_message_screen.h  info_message_screen.c  info_message_screen.h  mnemonic_display_screen.c  mnemonic_display_screen.h  password_entry_screen.c  password_entry_screen.h  qr_code_screen.c  qr_code_screen.h  splash_screen.c  splash_screen.h  timed_info_message_screen.c  timed_info_message_screen.h  wallet_navigate_screen.c  wallet_navigate_screen.h  wallet_screen.c  wallet_screen.h
pico/src/wallet_app/screens/images/: icons.c  wallet_logo.c
pico/src/wallet_file/: wallet_file.c  wallet_file.h
